# SPDX-FileCopyrightText: © 2024 The "Toto" contributors <romain.brault@romainbrault.com>
#
# SPDX-License-Identifier: MIT

[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "toto"
description = "A Python package."
keywords = [
    "Python",
]
license = "MIT"
license-files.paths = [
    "LICENSES/MIT.txt",
]
maintainers = [
    { name = "Romain Brault", email = "" },
]
authors = [
    { name = "Romain Brault", email = "" },
]
requires-python = ">=3.9,<4.0"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Framework :: tox",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [  ]

urls.changelog = "https://github.com/RomainBrault/toto/releases"
urls.discussions = "https://github.com/RomainBrault/toto/discussions"
urls.documentation = "https://github.com/RomainBrault/toto"
urls.download = "https://github.com/RomainBrault/toto/releases"
urls.homepage = "https://github.com/RomainBrault/toto"
urls.integration = "https://github.com/RomainBrault/toto/actions"
urls.issues = "https://github.com/RomainBrault/toto/issues"
urls.pypi = "https://pypi.org/project/toto"
urls.repository = "https://github.com/RomainBrault/toto"

[tool.uv]
managed = true
dev-dependencies = [
    "scalene>=1.5.19",
    "pynvim>=0.4.3",
    "beartype>=0.18.5",
    "hypothesis>=6.110.1",
    "pylint>=3.2.6",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-randomly>=3.15.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "xdoctest>=1.2.0",
]
